--- a/GSB_Mission_5/app/src/main/res/values/colors.xml
+++ b/GSB_Mission_5/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#03A9F4</color>
+
+    <color name="colorBlue">#2196F3</color>
+    <color name="colorWhite">#FFF</color>
 </resources>
