--- a/GSB_Mission_5/app/src/main/res/drawable/custom_blue_button.xml
+++ b/GSB_Mission_5/app/src/main/res/drawable/custom_blue_button.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorBlue" />
-    <corners android:bottomRightRadius="8dp"
-        android:bottomLeftRadius="28dp"
-        android:topRightRadius="28dp"
-        android:topLeftRadius="8dp"/>
+    <corners
+        android:bottomRightRadius="10dp"
+        android:bottomLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        android:topLeftRadius="10dp"/>
 </shape>
