--- a/GSB_Mission_5/app/src/main/res/layout/activity_login.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_login.xml
@@ -7,29 +7,39 @@
     android:layout_margin="10dp"
     tools:context=".LoginActivity">
 
-    <!-- TITLE -->
+    <!-- Logo -->
+    <ImageView
+        android:id="@+id/home_screen_icon"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        android:src="@drawable/gsb_logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Title -->
     <TextView
         android:id="@+id/login_screen_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_screen_title"
-        android:textSize="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/home_screen_icon"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-    <!-- ID -->
-
+    <!-- Id -->
     <TextView
         android:id="@+id/login_screen_id_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/login_screen_id_label"
-        android:textSize="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/login_screen_title" />
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_screen_title"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/login_screen_id_input"
@@ -37,18 +47,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="@string/login_screen_id_input"
+        app:layout_constraintTop_toBottomOf="@+id/login_screen_title"
         app:layout_constraintStart_toEndOf="@+id/login_screen_id_label"
-        app:layout_constraintTop_toBottomOf="@+id/login_screen_title" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/login_screen_id_label" />
 
-    <!-- PASSWORD -->
-
+    <!-- Password -->
     <TextView
         android:id="@+id/login_screen_password_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/login_screen_password_label"
-        android:textSize="30dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_screen_id_input" />
 
@@ -59,27 +69,31 @@
         android:layout_marginTop="8dp"
         android:hint="@string/login_screen_password_input"
         app:layout_constraintStart_toEndOf="@+id/login_screen_password_label"
-        app:layout_constraintTop_toBottomOf="@+id/login_screen_id_input" />
+        app:layout_constraintTop_toBottomOf="@+id/login_screen_id_input"
+        app:layout_constraintBaseline_toBaselineOf="@+id/login_screen_password_label"/>
 
-    <!-- CONFIRM BUTTON -->
+    <!-- Confirm button -->
     <Button
         android:id="@+id/login_screen_confirm_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_screen_confirm_button"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/custom_cyan_button"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_screen_password_label" />
 
-    <!-- CANCEL BUTTON -->
+    <!-- Cancel button -->
     <Button
         android:id="@+id/login_screen_cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_screen_cancel_button"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/custom_blue_button"
+        android:layout_marginLeft="8dp"
         app:layout_constraintTop_toTopOf="@+id/login_screen_confirm_button"
         app:layout_constraintStart_toEndOf="@+id/login_screen_confirm_button"/>
-
-
 
 </android.support.constraint.ConstraintLayout>
