--- a/GSB_Mission_5/app/src/main/res/layout/activity_show_all.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_show_all.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    tools:context=".HomeActivity">
+    tools:context=".ShowAllActivity">
 
     <!-- Logo -->
     <ImageView
-        android:id="@+id/home_screen_icon"
+        android:id="@+id/show_all_screen_icon"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:src="@drawable/gsb_logo"
@@ -19,48 +19,39 @@
 
     <!-- Title -->
     <TextView
-        android:id="@+id/home_screen_title"
+        android:id="@+id/show_all_screen_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/home_screen_title"
+        android:text="@string/show_all_screen_title"
         android:textSize="30dp"
         android:textStyle="bold"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/home_screen_icon"
+        app:layout_constraintTop_toBottomOf="@id/show_all_screen_icon"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
-    <!-- Add -->
+    <!-- Back button -->
     <Button
-        android:id="@+id/home_screen_add_button"
-        android:layout_width="match_parent"
+        android:id="@+id/show_all_screen_back_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/custom_cyan_button"
-        android:text="@string/home_screen_add_button"
-        app:layout_constraintTop_toBottomOf="@+id/home_screen_title" />
-
-    <!-- Month -->
-    <Button
-        android:id="@+id/home_screen_month_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/custom_cyan_button"
-        android:text="@string/home_screen_month_button"
-        app:layout_constraintTop_toBottomOf="@+id/home_screen_add_button" />
-
-    <!-- Logout -->
-    <Button
-        android:id="@+id/home_screen_logout_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:text="@string/show_all_screen_back_button"
         android:textColor="@color/colorWhite"
         android:background="@drawable/custom_blue_button"
-        android:text="@string/home_screen_logout_button"
-        app:layout_constraintTop_toBottomOf="@+id/home_screen_month_button" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/show_all_screen_title" />
+
+    <!-- Detail button -->
+    <Button
+        android:id="@+id/show_all_screen_detail_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/show_all_screen_detail_button"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/custom_cyan_button"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/show_all_screen_back_button" />
 
 </android.support.constraint.ConstraintLayout>
