--- a/GSB_Mission_5/app/src/main/res/layout/activity_home.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_home.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    tools:context=".HomeActivity">
+    tools:context=".activities.HomeActivity">
 
     <!-- Logo -->
     <ImageView
@@ -63,4 +63,4 @@
         android:text="@string/home_screen_logout_button"
         app:layout_constraintTop_toBottomOf="@+id/home_screen_month_button" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
