--- a/GSB_Mission_5/app/src/main/res/layout/activity_login.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    tools:context=".LoginActivity">
+    tools:context=".activities.LoginActivity">
 
     <!-- Logo -->
     <ImageView
@@ -84,16 +84,4 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_screen_password_label" />
 
-    <!-- Cancel button -->
-    <Button
-        android:id="@+id/login_screen_cancel_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_screen_cancel_button"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/custom_blue_button"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintTop_toTopOf="@+id/login_screen_confirm_button"
-        app:layout_constraintStart_toEndOf="@+id/login_screen_confirm_button"/>
-
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
