--- a/GSB_Mission_5/app/src/main/res/layout/activity_month.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_month.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    tools:context=".MonthActivity">
+    tools:context=".activities.MonthActivity">
 
     <!-- Logo -->
     <ImageView
@@ -72,4 +72,4 @@
         app:layout_constraintTop_toTopOf="@+id/month_screen_confirm_button"
         app:layout_constraintStart_toEndOf="@+id/month_screen_confirm_button"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
