--- a/GSB_Mission_5/app/src/main/res/layout/activity_add.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_add.xml
@@ -46,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/add_screen_datevisite_input"
+        android:text="5/21/2019"
         app:layout_constraintBaseline_toBaselineOf="@+id/add_screen_datevisite_label"
         app:layout_constraintLeft_toRightOf="@+id/add_screen_datevisite_label" />
 
@@ -84,6 +85,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/add_screen_motif_input"
+        android:text="Motif"
+        android:singleLine="true"
         app:layout_constraintLeft_toRightOf="@+id/add_screen_motif_label"
         app:layout_constraintBaseline_toBaselineOf="@+id/add_screen_motif_label" />
 
@@ -103,6 +106,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
+        android:text="bilan nominatif de quentin"
         android:lines="3"
         android:minLines="3"
         android:maxLines="3"
@@ -125,7 +129,7 @@
 
     <Spinner
         android:id="@+id/add_screen_coefconfiance_spinner"
-        android:layout_width="70dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
         app:layout_constraintLeft_toRightOf="@+id/add_screen_coefconfiance_label"
