--- a/GSB_Mission_5/app/src/main/res/layout/activity_show_all.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_show_all.xml
@@ -30,6 +30,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <!-- Recyclerview -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/show_all_screen_title">
+    </androidx.recyclerview.widget.RecyclerView>
+
     <!-- Back button -->
     <Button
         android:id="@+id/show_all_screen_back_button"
@@ -40,7 +48,7 @@
         android:background="@drawable/custom_blue_button"
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/show_all_screen_title" />
+        app:layout_constraintTop_toBottomOf="@+id/recycler" />
 
     <!-- Detail button -->
     <Button
