--- a/GSB_Mission_5/app/src/main/res/layout/activity_add.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_add.xml
@@ -85,10 +85,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/add_screen_motif_input"
-        android:text="Motif"
+        android:text="Un motif"
         android:singleLine="true"
         app:layout_constraintLeft_toRightOf="@+id/add_screen_motif_label"
         app:layout_constraintBaseline_toBaselineOf="@+id/add_screen_motif_label" />
+        <!-- android:text="Un motif" : debug -->
 
     <!-- Bilan -->
     <TextView
@@ -106,7 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
-        android:text="bilan nominatif de quentin"
+        android:text="Un bilan"
         android:lines="3"
         android:minLines="3"
         android:maxLines="3"
@@ -115,6 +116,7 @@
         android:hint="@string/add_screen_bilan_input"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add_screen_bilan_label" />
+        <!-- android:text="Un bilan" : debug -->
 
     <!-- CoefConfiance -->
     <TextView
