--- a/GSB_Mission_5/app/src/main/res/layout/activity_month.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_month.xml
@@ -25,6 +25,7 @@
         android:text="@string/month_screen_title"
         android:textSize="25dp"
         android:textStyle="bold"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/month_screen_icon"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
