--- a/GSB_Mission_5/app/src/main/res/layout/activity_login.xml
+++ b/GSB_Mission_5/app/src/main/res/layout/activity_login.xml
@@ -47,10 +47,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="@string/login_screen_id_input"
-        android:text="lvillachane"
         app:layout_constraintTop_toBottomOf="@+id/login_screen_title"
         app:layout_constraintStart_toEndOf="@+id/login_screen_id_label"
         app:layout_constraintBaseline_toBaselineOf="@+id/login_screen_id_label" />
+        <!-- android:text="lvillachane" -->
 
     <!-- Password -->
     <TextView
@@ -67,12 +67,12 @@
         android:id="@+id/login_screen_password_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="azerty"
         android:layout_marginTop="8dp"
         android:hint="@string/login_screen_password_input"
         app:layout_constraintStart_toEndOf="@+id/login_screen_password_label"
         app:layout_constraintTop_toBottomOf="@+id/login_screen_id_input"
         app:layout_constraintBaseline_toBaselineOf="@+id/login_screen_password_label"/>
+        <!-- android:text="azerty" -->
 
     <!-- Confirm button -->
     <Button
